<resources>
    <string name="app_name">Black Lotus</string>
    <string name="title_activity_user">Create new user</string>

    <string name="default_email_error">Invalid e-mail</string>
    <string name="default_required">Required</string>
    <string name="default_color">Color</string>
    <string name="default_not_found">No results found</string>
    <string name="default_share">Share</string>
    <string name="default_search">Search</string>
    <string name="default_rarity">Rarity</string>
    <string name="default_set">Set</string>
    <string name="default_close">Close</string>
    <string name="default_cancel">Cancel</string>
    <string name="default_error_title">Error</string>
    <string name="default_deleted">Deleted</string>
    <string name="default_loading">Loading</string>
    <string name="default_error">An error occurred %s</string>

    <!-- Content description -->
    <string name="default_card_content_description">Card image</string>
    <string name="default_deck_content_description">Deck image</string>
    <string name="default_empty_state_deck_content_description">Empty state deck image</string>
    <string name="default_empty_state_card_content_description">Empty state card image</string>
    <string name="default_logo_content_description">Card image</string>
    <string name="offline_no_internet">Without internet?</string>
    <string name="offline_no_internet_retry">Retry again</string>

    <!-- General -->
    <string name="default_description">Description</string>
    <string name="default_error_save">Description</string>

    <!-- Create user -->
    <string name="register_user_email_hint">E-mail</string>
    <string name="register_user_email_help">Enter a valid email</string>
    <string name="register_user_name_hint">Name</string>
    <string name="register_user_name_help">Enter your name</string>
    <string name="register_user_password_hint">Password</string>
    <string name="register_user_password_help">Enter a password (min. 10 chars)</string>
    <string name="register_user_password_confirmation_hint">Password Confirmation</string>
    <string name="register_user_password_confirmation_help">Enter the same password</string>
    <string name="register_user_signup">sign up</string>

    <!-- Login -->
    <string name="login_sign_message">Don\'t have an account?</string>
    <string name="login_signup"><u>Sign up</u></string>
    <string name="login_forgot_password"><u>Forgot password?</u></string>
    <string name="login_signin">Sign in</string>
    <string name="login_auth_error">Authentication error occurred.</string>
    <string name="login_auth_password_error">Password with a minimum of 6 digits</string>

    <!-- Navigation -->
    <string name="navigation_decks">Decks</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_edit_deck">Edit</string>
    <string name="navigation_del_deck">Delete deck</string>
    <string name="navigation_del_card">Delete card(s)</string>
    <string name="navigation_cancel">Cancel</string>
    <string name="navigation_card">Card</string>
    <string name="navigation_cards">Cards</string>

    <!-- Decks -->
    <string name="decks_number_cards">%s card(s)</string>
    <string name="deck_empty_state">There are no decks. Register a new deck</string>
    <string name="default_signout">Sign out</string>
    <string name="deck_name_hint">Deck name</string>
    <string name="deck_name_help">Enter your deck name</string>
    <string name="deck_change">Deck change</string>
    <string name="deck_select_color_title">Select deck color</string>
    <string name="deck_select_color_confirm">confirm</string>
    <string name="deck_add_color_title">Add deck color</string>
    <string name="deck_save_button">save</string>
    <string name="deck_color_exists_error">Color already selected</string>
    <string name="deck_clear_color_underline"><u>Clear colors</u></string>
    <string name="deck_add_color">Add color</string>
    <string name="deck_error_one_color">One color must be selected</string>
    <string name="deck_delete_title">Delete</string>
    <string name="deck_delete_title_confirm">Delete deck %s?</string>
    <string name="deck_delete_button">Delete deck</string>
    <string name="deck_delete_confirm_msg">Deck deleted</string>

    <!--Card-->
    <string name="card_land_title">Land(s)</string>
    <string name="card_title">Card(s)</string>
    <string name="card_empty_state">There are no cards. \nRegister a new card</string>
    <string name="land_empty_state">There are no lands. \nRegister a new card land</string>

    <!--Card Editor-->
    <string name="card_editor_quantity">Quantity</string>
    <string name="card_editor_format_power_toughness">%d/%d</string>
    <string name="card_editor_save">save</string>
    <string name="card_save_title">Success</string>
    <string name="card_save_message">Card save</string>
    <string name="card_error_title">Error</string>
    <string name="card_error_message">Card dont\'t save</string>

    <string name="card_delete_title">Delete</string>
    <string name="card_delete_title_confirm">Delete card %s?</string>
    <string name="card_delete_button">Delete card</string>
    <string name="card_delete_confirm_msg">Card deleted</string>

    <!-- Preferences -->
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">Second language for search</string>
    <array name="second_language_api">
        <item>Chinese Simplified</item>
        <item>Chinese Traditional</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Portuguese (Brazil)</item>
        <item>Russian</item>
        <item>Spanish</item>
    </array>
    <string name="pref_quantity_same_cards_in_deck">Quantity cards in same deck</string>
    <string name="pref_quantity_same_cards_in_deck_title">Quantity</string>
    <string name="pref_quantity_same_cards_in_deck_msg">Input quantity cards in same deck</string>

    <!-- Search -->
    <string name="search_card_help">Enter the name of the card in the search.\n
    If you have activated the second language, you can indicate the toggle (SL)</string>
    <string name="search_card_error">An error occurred</string>

    <!-- Forgot -->
    <string name="forgot_title">Recover password</string>
    <string name="forgot_password_recover">recover</string>
    <string name="forgot_password_help">Fill in your email address. You will receive an email with the steps</string>
    <string name="forgot_email">E-mail</string>

    <string name="forgot_dialog_title">E-mail send</string>
    <string name="forgot_dialog_message">You will receive an email to reset your password</string>
    <string name="default_second_language">SL</string>

    <!-- CSV -->
    <string name="csv_card_name">Card Name</string>
    <string name="csv_quantity">Quantity</string>
    <string name="csv_rarity">Rarity</string>
    <string name="date_convert_short">dd-MM-yyyy</string>

    <!-- Widget -->
    <string name="widget_no_deck_selected">No deck selected</string>

    <!-- Signout -->
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_confirm">Do you really want to exit?</string>

</resources>
